# flag-enum-c-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  install_manifest.txt  libreflag.1.4.0.dylib  libreflag.dylib  reflag.pc  reflag.pc.in
include/: bool.h  enum.h  flag.h  input.h  reflag.h  renum.h
input/: all.c  all.h  font.txt
inputs/: all.c  restaurant.txt  tcp_connection.txt
output/: enum-test  enum_test  flag-test  flag_test  input  renum-test  renum_test
outputs/: Enum-out  Flag-out  Input  Input-out  Renum-out  Util-out  boolTestOutput  enumTestOutput  enum_test  flagTestOutput  flag_test  renum_test
src/: bool.c  enum.c  flag.c  input.c  renum.c
test/: enum-test.c  flag-test.c  renum-test.c
tests/: bool_test.c  enum_test.c  flag_test.c  renum_test.c
